--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
        <div class="item-bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Ты не поверишь, кто придёт <br>
       в библиотеку Bla Bla Lib<br>
       на этой неделе!</h1>
-      <img src="Images/triangle1.svg" alt="" class="triangle1">
+      <img src="images/triangle1.svg" alt="" class="triangle1">
       </div>
 
       <div id="bubble2">
     <div class="item-bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 48px;">Кто же?</h1>
-      <img src="Images/triangle2.svg" alt="" class="triangle2"></div>
+      <img src="images/triangle2.svg" alt="" class="triangle2"></div>
 
 
       <div id="bubble3">
     <div class="item-bubble3" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; line-height: 160px; margin-left: 61px; margin-top: 4px; text-align: left;">Лев Толстой!</h1>
-      <img src="Images/triangle3.svg" alt="" class="triangle3"></div>
+      <img src="images/triangle3.svg" alt="" class="triangle3"></div>
       </div>
 
       <div class="item-bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Он будет учить, как побеждать<br>
 в шахматах. А еще с ним <br>
 можно будет сыграть  в партию</h1>
-  <img src="Images/triangle4.svg" alt="" class="triangle4"></div>
+  <img src="images/triangle4.svg" alt="" class="triangle4"></div>
 
 
   <div class="item-bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">Правда? Я слышала, он был <br>
 хорош в шахматах! А когда <br>
 с ним можно будет встретиться?</h1>
-  <img src="Images/triangle5.svg" alt="" class="triangle5"></div>
+  <img src="images/triangle5.svg" alt="" class="triangle5"></div>
 
 
   <div id="bubble6">
     <div class="item-bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">26 декабря в 13:00</h1>
-      <img src="Images/triangle6.svg" alt="" class="triangle6"></div>
+      <img src="images/triangle6.svg" alt="" class="triangle6"></div>
 
 
       <div id="bubble7">
           <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день
       в календаре:)</h1>
-        <img src="Images/triangle7.svg" alt="" class="triangle7"></div>
+        <img src="images/triangle7.svg" alt="" class="triangle7"></div>
             </div>
 
 
@@ -109,7 +109,7 @@
 
 <section class="littlesquares">
   <div class="littlesquare" style="background: #222831;">
-       <div class="whiteladya"><img class="image1" src="Images/belayaladya.svg" alt="belayaladya"></img></div>
+       <div class="whiteladya"><img class="image1" src="images/belayaladya.svg" alt="belayaladya"></img></div>
      </div>
 
      <div class="littlesquare" style="background: #E8E8E8;">
@@ -140,7 +140,7 @@
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;">
 
-         <div class="koroleva"> <img class="image2" src="Images/belayakoroleva.svg" alt="belayakoroleva">   </img></div>
+         <div class="koroleva"> <img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva">   </img></div>
 
      </div>
 </section>
@@ -243,19 +243,19 @@
 <section class="bigsquares">
   <div class="line1">
   <div class="bigsquare" style="background: #E8E8E8;">
-    <img id="image3" src="Images/figurka3.svg" alt="figurka3"></img>
+    <img id="image3" src="images/figurka3.svg" alt="figurka3"></img>
   </div>
 
   <div class="bigsquare" style="background: #206A5D;">
-  <img id="image4" src="Images/figurka4.svg" alt="belayakoroleva"></img>
+  <img id="image4" src="images/figurka4.svg" alt="belayakoroleva"></img>
   </div>
 
   <div class="bigsquare" style="background: #E8E8E8;">
-    <img id="image5" src="Images/figurka5.svg" alt="belayakoroleva"></img>
+    <img id="image5" src="images/figurka5.svg" alt="belayakoroleva"></img>
   </div>
 
   <div class="bigsquare" style="background: #206A5D;">
-    <img id="image6" src="Images/figurka6.svg" alt="belayakoroleva"></img>
+    <img id="image6" src="images/figurka6.svg" alt="belayakoroleva"></img>
   </div>
   </div>
 </section>
@@ -264,19 +264,19 @@
 <section class="bigsquares">
   <div class="line2">
   <div class="bigsquare" style="background: #206A5D;">
-      <div><img id="image7" src="Images/figurka7.svg" alt="belayakoroleva"></img></div>
+      <div><img id="image7" src="images/figurka7.svg" alt="belayakoroleva"></img></div>
   </div>
 
   <div class="bigsquare" style="background: #E8E8E8;">
-      <div><img id="image8" src="Images/figurka8.svg" alt="belayakoroleva"></img></div>
+      <div><img id="image8" src="images/figurka8.svg" alt="belayakoroleva"></img></div>
   </div>
 
   <div class="bigsquare" style="background: #206A5D;">
-      <div><img id="image9" src="Images/figurka9.svg" alt="belayakoroleva"></img></div>
+      <div><img id="image9" src="images/figurka9.svg" alt="belayakoroleva"></img></div>
   </div>
 
   <div class="bigsquare" style="background: #E8E8E8;">
-      <div><img id="image10" src="Images/figurka10.svg" alt="belayakoroleva"></img></div>
+      <div><img id="image10" src="images/figurka10.svg" alt="belayakoroleva"></img></div>
   </div>
 
 </section>
@@ -300,7 +300,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-     <img id="image11" src="Images/figurka11.svg" alt="belayakoroleva"></img>
+     <img id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
    </div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
@@ -322,7 +322,7 @@
 
 <section class="lastsquares">
   <div class="littlesquare" style="background: #E8E8E8;">
-     <img id="image12" src="Images/figurka12.svg" alt="belayakoroleva"></img>
+     <img id="image12" src="images/figurka12.svg" alt="belayakoroleva"></img>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;">
