--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" href="stylesheet/index.css">
   <link rel="stylesheet" href="stylesheet/content.css">
+  <link rel="stylesheet" href="stylesheet/reset.css">
     <title>Мастеркласс от Толстого</title>
     </head>
 
@@ -15,41 +16,42 @@
 
 
       <div id="bubble1">
-       <div class="item-bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Ты не поверишь, кто придёт <br>
+       <div class="item-bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Ты не поверишь, кто придёт <br>
       в библиотеку Bla Bla Lib<br>
       на этой неделе!</h1>
       <img src="images/triangle1.svg" alt="" class="triangle1">
       </div>
 
       <div id="bubble2">
-    <div class="item-bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 48px;">Кто же?</h1>
+    <div class="item-bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold;font-size: 3rem; margin-left: 61px; margin-top: 48px;">Кто же?</h1>
       <img src="images/triangle2.svg" alt="" class="triangle2"></div>
 
 
       <div id="bubble3">
-    <div class="item-bubble3" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; line-height: 160px; margin-left: 61px; margin-top: 4px; text-align: left;">Лев Толстой!</h1>
+    <div class="item-bubble3" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold;
+    font-size: 3rem; line-height: 160px; margin-left: 61px; margin-top: 4px; text-align: left;">Лев Толстой!</h1>
       <img src="images/triangle3.svg" alt="" class="triangle3"></div>
       </div>
 
-      <div class="item-bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Он будет учить, как побеждать<br>
+      <div class="item-bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Он будет учить, как побеждать<br>
 в шахматах. А еще с ним <br>
 можно будет сыграть  в партию</h1>
   <img src="images/triangle4.svg" alt="" class="triangle4"></div>
 
 
-  <div class="item-bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">Правда? Я слышала, он был <br>
+  <div class="item-bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Правда? Я слышала, он был <br>
 хорош в шахматах! А когда <br>
 с ним можно будет встретиться?</h1>
   <img src="images/triangle5.svg" alt="" class="triangle5"></div>
 
 
   <div id="bubble6">
-    <div class="item-bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">26 декабря в 13:00</h1>
+    <div class="item-bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">26 декабря в 13:00</h1>
       <img src="images/triangle6.svg" alt="" class="triangle6"></div>
 
 
       <div id="bubble7">
-          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день
+          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день
       в календаре:)</h1>
         <img src="images/triangle7.svg" alt="" class="triangle7"></div>
             </div>
@@ -300,7 +302,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-     <img id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
+     <img class="image11" id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
    </div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
@@ -322,7 +324,7 @@
 
 <section class="lastsquares">
   <div class="littlesquare" style="background: #E8E8E8;">
-     <img id="image12" src="images/figurka12.svg" alt="belayakoroleva"></img>
+     <div class="blackqueen"><img class="image12"  id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;">
@@ -338,7 +340,9 @@
 <section class="lastsquares">
   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;">
-     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
+     <div class="blackqueen">
+     </div>
+     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: 700; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
 с нетерпением!</p>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
