--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-     <img class="image11" id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
+     <img id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
    </div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
@@ -324,7 +324,7 @@
 
 <section class="lastsquares">
   <div class="littlesquare" style="background: #E8E8E8;">
-     <div class="blackqueen"><img class="image12"  id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
+     <div class="blackqueen"><img id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;">
@@ -342,10 +342,10 @@
    <div class="littlesquare" style="background: #E8E8E8;">
      <div class="blackqueen">
      </div>
-     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: 700; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
-с нетерпением!</p>
+
    </div>
-   <div class="littlesquare" style="background: #222831;"></div>
+   <div class="littlesquare" style="background: #222831;"><p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
+с нетерпением!</p></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
