--- a/index.html
+++ b/index.html
@@ -290,9 +290,15 @@
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare" style="background: #E8E8E8;">
+       <div class="horse"></div>
+     </div>
+     <div class="littlesquare" style="background: #222831;">
+       <div class="horse"></div>
+     </div>
+     <div class="littlesquare" style="background: #222831;">
+       <div class="horse"></div>
+     </div>
 </section>
 
 <section class="lastsquares">
@@ -302,7 +308,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-     <img id="image11" src="images/figurka11.svg" alt="belayakoroleva"></img>
+     <div class="horse"><img class="image11" src="images/figurka11.svg" alt=""></img></div>
    </div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
@@ -340,12 +346,10 @@
 <section class="lastsquares">
   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;">
-     <div class="blackqueen">
-     </div>
-
+     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
+с нетерпением!</p>
    </div>
-   <div class="littlesquare" style="background: #222831;"><p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
-с нетерпением!</p></div>
+   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
