--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-     <div class="horse"><img class="image11" src="images/figurka11.svg" alt=""></img></div>
+     <div class="horse"><img class="image11" src="images/horse.svg" alt=""></img></div>
    </div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
