--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
       <div id="bubble7">
-          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день
+          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день <br>
       в календаре:)</h1>
         <img src="images/triangle7.svg" alt="" class="triangle7"></div>
             </div>
