--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
 </section>
 
 <section class="lastsquares">
-  <div class="littlesquare" style="background: #222831;"></div>
+  <div class="littlesquare" style="background: #222831;">
+    <div class="blackqueen"></div>
+  </div>
    <div class="littlesquare" style="background: #E8E8E8;">
      <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
 с нетерпением!</p>
