--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
   <img id="image4" src="images/figurka4.svg" alt="belayakoroleva"></img>
   </div>
 
-  <div class="bigsquare" style="background: #E8E8E8;">
+  <div class="bigsquare bigsquare3" style="background: #E8E8E8;">
     <img id="image5" src="images/figurka5.svg" alt="belayakoroleva"></img>
   </div>
 
-  <div class="bigsquare" style="background: #206A5D;">
+  <div class="bigsquare bigsquare4" style="background: #206A5D;">
     <img id="image6" src="images/figurka6.svg" alt="belayakoroleva"></img>
   </div>
   </div>
@@ -273,11 +273,11 @@
       <div><img id="image8" src="images/figurka8.svg" alt="belayakoroleva"></img></div>
   </div>
 
-  <div class="bigsquare" style="background: #206A5D;">
+  <div class="bigsquare bigsquare7" style="background: #206A5D;">
       <div><img id="image9" src="images/figurka9.svg" alt="belayakoroleva"></img></div>
   </div>
 
-  <div class="bigsquare" style="background: #E8E8E8;">
+  <div class="bigsquare bigsquare8" style="background: #E8E8E8;">
       <div><img id="image10" src="images/figurka10.svg" alt="belayakoroleva"></img></div>
   </div>
 
