--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
   <div class="littlesquare" style="background: #E8E8E8;"></div>
   <div class="littlesquare" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
 </section>
 
 
@@ -76,10 +76,10 @@
   <div class="littlesquare" style="background: #206A5D;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
   <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
 </section>
 
 
@@ -88,10 +88,10 @@
     <div class="littlesquare" style="background: #E8E8E8;"></div>
     <div class="littlesquare" style="background: #206A5D;"></div>
     <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+    <div class="littlesquare ls" style="background: #222831;"></div>
+    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
 </section>
 
 
@@ -122,10 +122,10 @@
         <div class="whiteladya"></div>
      </div>
 
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;">
           <div class="koroleva"></div>
      </div>
@@ -136,10 +136,10 @@
       <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;">
 
          <div class="koroleva"> <img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva">   </img></div>
@@ -147,19 +147,42 @@
      </div>
 </section>
 
-<section class="littlesquares">
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #222831;"></div>
     <div class="littlesquare" style="background: #E8E8E8;"></div>
     <div class="littlesquare" style="background: #222831;"></div>
     <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare ls" style="background: #222831;"></div>
+    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+    <div class="littlesquare ls" style="background: #222831;"></div>
+    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
 </section>
 
 
-<section class="littlesquares">
+<section class="littlesquares ls">
+  <div class="littlesquare" style="background: #E8E8E8;"></div>
+     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare" style="background: #E8E8E8;"></div>
+     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+</section>
+
+
+<section class="littlesquares ls">
+  <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare" style="background: #E8E8E8;"></div>
+     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+</section>
+
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
@@ -171,18 +194,19 @@
 </section>
 
 
-<section class="littlesquares">
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare" style="background: #222831;"></div>
+    <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare" style="background: #222831;"></div>
+    <div class="littlesquare" style="background: #E8E8E8;"></div>
+    <div class="littlesquare" style="background: #222831;"></div>
+    <div class="littlesquare" style="background: #E8E8E8;"></div>
 </section>
 
-<section class="littlesquares">
+
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
@@ -194,31 +218,7 @@
 </section>
 
 
-<section class="littlesquares">
-  <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-    <div class="littlesquare" style="background: #222831;"></div>
-    <div class="littlesquare" style="background: #E8E8E8;"></div>
-</section>
-
-
-<section class="littlesquares">
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-</section>
-
-
-<section class="littlesquares">
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
@@ -230,7 +230,7 @@
 </section>
 
 
-<section class="littlesquares">
+<section class="littlesquares ls">
   <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
@@ -252,11 +252,11 @@
   <img id="image4" src="images/figurka4.svg" alt="belayakoroleva"></img>
   </div>
 
-  <div class="bigsquare bigsquare3" style="background: #E8E8E8;">
+  <div class="bigsquare bigsquare3 bs" style="background: #E8E8E8;">
     <img id="image5" src="images/figurka5.svg" alt="belayakoroleva"></img>
   </div>
 
-  <div class="bigsquare bigsquare4" style="background: #206A5D;">
+  <div class="bigsquare bigsquare4 bs" style="background: #206A5D;">
     <img id="image6" src="images/figurka6.svg" alt="belayakoroleva"></img>
   </div>
   </div>
@@ -273,11 +273,11 @@
       <div><img id="image8" src="images/figurka8.svg" alt="belayakoroleva"></img></div>
   </div>
 
-  <div class="bigsquare bigsquare7" style="background: #206A5D;">
+  <div class="bigsquare bigsquare7 bs" style="background: #206A5D;">
       <div><img id="image9" src="images/figurka9.svg" alt="belayakoroleva"></img></div>
   </div>
 
-  <div class="bigsquare bigsquare8" style="background: #E8E8E8;">
+  <div class="bigsquare bigsquare8 bs" style="background: #E8E8E8;">
       <div><img id="image10" src="images/figurka10.svg" alt="belayakoroleva"></img></div>
   </div>
 
