--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,400,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="stylesheet/index.css">
   <link rel="stylesheet" href="stylesheet/content.css">
   <link rel="stylesheet" href="stylesheet/reset.css">
+  <link rel="stylesheet" href="stylesheet/responsive.css">
+
     <title>Мастеркласс от Толстого</title>
     </head>
 
@@ -23,7 +25,7 @@
       </div>
 
       <div id="bubble2">
-    <div class="item-bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold;font-size: 3rem; margin-left: 61px; margin-top: 48px;">Кто же?</h1>
+    <div class="item-bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Кто же?</h1>
       <img src="images/triangle2.svg" alt="" class="triangle2"></div>
 
 
@@ -33,25 +35,25 @@
       <img src="images/triangle3.svg" alt="" class="triangle3"></div>
       </div>
 
-      <div class="item-bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Он будет учить, как побеждать<br>
+      <div class="item-bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Он будет учить, как побеждать<br>
 в шахматах. А еще с ним <br>
 можно будет сыграть  в партию</h1>
   <img src="images/triangle4.svg" alt="" class="triangle4"></div>
 
 
-  <div class="item-bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Правда? Я слышала, он был <br>
+  <div class="item-bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Правда? Я слышала, он был <br>
 хорош в шахматах! А когда <br>
 с ним можно будет встретиться?</h1>
   <img src="images/triangle5.svg" alt="" class="triangle5"></div>
 
 
   <div id="bubble6">
-    <div class="item-bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">26 декабря в 13:00</h1>
+    <div class="item-bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">26 декабря в 13:00</h1>
       <img src="images/triangle6.svg" alt="" class="triangle6"></div>
 
 
       <div id="bubble7">
-          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 48px; margin-left: 61px; margin-top: 76px;">Пойду отмечу этот день <br>
+          <div class="item-bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">Пойду отмечу этот день <br>
       в календаре:)</h1>
         <img src="images/triangle7.svg" alt="" class="triangle7"></div>
             </div>
@@ -73,13 +75,14 @@
 
 <section class="littlesquares">
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #206A5D;"></div>
+  <div class="littlesquare ls" style="background: #206A5D;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare" style="background: #E8E8E8;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare telshow" style="background: #222831;"> <img src="images/telkoroleva.svg" alt=""> </div>
 </section>
 
 
@@ -96,17 +99,18 @@
 
 
 <section class="littlesquares">
+  <div class="littlesquare" style="background: #E8E8E8;"><img class="telshow" src="images/chornayaladya.svg" alt=""></div>
+  <div class="littlesquare telshow" style="background: #206A5D;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="littlesquare" style="background: #222831;"></div>
-  <div class="littlesquare" style="background: #E8E8E8;"></div>
-  <div class="litlittlesquare" style="background: #222831;">
-       <div class="koroleva"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+  <div class="litlittlesquare ls" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #222831;">
+     <div class="koroleva"></div>
   </div>
-  <div class="littlesquare" style="background: #222831;"></div>
 </section>
 
 <section class="littlesquares">
@@ -142,7 +146,7 @@
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;">
 
-         <div class="koroleva"> <img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva">   </img></div>
+         <div class="koroleva"><img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva"></img></div>
 
      </div>
 </section>
@@ -264,7 +268,7 @@
 
 
 <section class="bigsquares">
-  <div class="line2">
+  <div class="line2 bs">
   <div class="bigsquare" style="background: #206A5D;">
       <div><img id="image7" src="images/figurka7.svg" alt="belayakoroleva"></img></div>
   </div>
