--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
       <div id="bubble1">
-       <div class="item-bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 61px; margin-top: 76px;">Ты не поверишь, кто придёт <br>
+       <div class="item-bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Ты не поверишь, кто придёт <br>
       в библиотеку Bla Bla Lib<br>
       на этой неделе!</h1>
       <img src="images/triangle1.svg" alt="" class="triangle1">
