--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
-  <div class="littlesquare telshow" style="background: #222831;"> <img src="images/telkoroleva.svg" alt=""> </div>
+  <div class="littlesquare telshow" style="background: #222831;"> <img class="telkoroleva" src="images/telkoroleva.svg" alt=""> </div>
 </section>
 
 
@@ -100,7 +100,7 @@
 
 
 <section class="littlesquares">
-  <div class="littlesquare" style="background: #E8E8E8;"><img class="telshow" src="images/chornayaladya.svg" alt=""></div>
+  <div class="littlesquare" style="background: #E8E8E8;"><img class="telshow chornayaladya" src="images/chornayaladya.svg" alt=""></div>
   <div class="littlesquare telshow" style="background: #206A5D;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
@@ -290,18 +290,25 @@
 
 
 <section class="lastsquares">
-  <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
-     <div class="littlesquare" style="background: #E8E8E8;">
+  <div class="littlesquare last1" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+     <div class="littlesquare last2" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare last3" style="background: #222831;"></div>
+      <div class="littlesquare telshow last4" style="background: #E8E8E8;"></div>
+       <div class="littlesquare telshow last5" style="background: #222831;"></div>
+       <div class="littlesquare telshow last6" style="background: #E8E8E8;"></div>
+        <div class="littlesquare telshow last7" style="background: #222831;"></div>
+
+
+
+     <div class="littlesquare ls" style="background: #E8E8E8;">
        <div class="horse"></div>
      </div>
-     <div class="littlesquare" style="background: #222831;">
+     <div class="littlesquare ls" style="background: #222831;">
        <div class="horse"></div>
      </div>
-     <div class="littlesquare" style="background: #222831;">
+     <div class="littlesquare ls" style="background: #222831;">
        <div class="horse"></div>
      </div>
 </section>
@@ -309,31 +316,39 @@
 <section class="lastsquares">
   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
-   <div class="littlesquare" style="background: #222831;">
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #222831;">
+
      <div class="horse"><img class="image11" src="images/horse.svg" alt=""></img></div>
    </div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
-   <div class="littlesquare" style="background: #222831;"></div>
+
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #222831;"></div>
+
+    <div class="littlesquare telshow last4" style="background: #222831;"></div>
+    <div class="littlesquare telshow last5" style="background: #222831;"></div>
+    <div class="littlesquare telshow last6" style="background: #222831;"></div>
+    <div class="littlesquare telshow last7" style="background: #222831;"></div>
 </section>
 
 
 <section class="lastsquares">
   <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
        <p class="basmannaya" style="color: #FFFFFF; font-family: 'Roboto', sans-serif;  font-weight: regular; font-size: 1.1rem; margin-left: 3.8em; margin-top: 4.75em;">Ул. Басманная, 10 <br>Вход свободный</p>
    </div>
-   <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
-   <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
+   <div class="littlesquare " style="background: #222831;"></div>
+   <div class="littlesquare ls" style="background: #222831;"></div>
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #222831;"></div>
+   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare telshow" style="background: #206A5D;"></div>
 </section>
 
-<section class="lastsquares">
+<section class="lastsquares ls">
   <div class="littlesquare" style="background: #E8E8E8;">
      <div class="blackqueen"><img id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
    </div>
@@ -348,7 +363,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
 </section>
 
-<section class="lastsquares">
+<section class="lastsquares ls">
   <div class="littlesquare" style="background: #222831;">
     <div class="blackqueen"></div>
   </div>
@@ -364,7 +379,7 @@
    <div class="littlesquare" style="background: #222831;"></div>
 </section>
 
-<section class="lastsquares">
+<section class="lastsquares ls">
   <div class="littlesquare" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
