--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
 
 
       <div id="bubble1">
-       <div class="item_bubble1" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Ты не поверишь, кто придёт <br>
+       <div class="item_bubble1" style="background-color: #FFC6C6;"><h1 class="bubbletext bubbletext1" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Ты не поверишь, кто придёт <br>
       в библиотеку Bla Bla Lib<br>
       на этой неделе!</h1>
       <img src="images/triangle1.svg" alt="" class="triangle1">
       </div>
 
       <div id="bubble2">
-    <div class="item_bubble2" style="background-color: #FFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Кто же?</h1>
+    <div class="item_bubble2" style="background-color: #FFFF;"><h1 class="bubbletext bubbletext2" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Кто же?</h1>
       <img src="images/triangle2.svg" alt="" class="triangle2"></div>
 </div>
 
       <div id="bubble3">
-    <div class="item_bubble3" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold;
-    font-size: 3rem; line-height: 160px; margin-left: 61px; margin-top: 4px; text-align: left;">Лев Толстой!</h1>
+    <div class="item_bubble3" style="background-color: #FFC6C6;"><h1 class="bubbletext bubbletext3"  style="font-family: 'Roboto', sans-serif; font-weight: bold;
+   text-align: left;">Лев Толстой!</h1>
       <img src="images/triangle3.svg" alt="" class="triangle3"></div>
       </div>
 
-      <div class="item_bubble4" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Он будет учить, как побеждать<br>
+      <div class="item_bubble4" style="background-color: #FFC6C6;"><h1 class="bubbletext bubbletext4" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Он будет учить, как побеждать<br>
 в шахматах. А еще с ним <br>
 можно будет сыграть  в партию</h1>
   <img src="images/triangle4.svg" alt="" class="triangle4"></div>
 </div>
 
 
-  <div class="item_bubble5" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Правда? Я слышала, он был <br>
+  <div class="item_bubble5" style="background-color: #FFFFFF;"><h1 class="bubbletext bubbletext5" style="font-family: 'Roboto', sans-serif; font-weight: bold; ">Правда? Я слышала, он был <br>
 хорош в шахматах! А когда <br>
 с ним можно будет встретиться?</h1>
   <img src="images/triangle5.svg" alt="" class="triangle5"></div>
 
 
   <div id="bubble6">
-    <div class="item_bubble6" style="background-color: #FFC6C6;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">26 декабря в 13:00</h1>
+    <div class="item_bubble6" style="background-color: #FFC6C6;"><h1 class="bubbletext bubbletext6" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">26 декабря в 13:00</h1>
       <img src="images/triangle6.svg" alt="" class="triangle6"></div>
 </div>
 
       <div id="bubble7">
-          <div class="item_bubble7" style="background-color: #FFFFFF;"><h1 id="bubbletext" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">Пойду отмечу этот день <br>
+          <div class="item_bubble7" style="background-color: #FFFFFF;"><h1 class="bubbletext bubbletext7" style="  font-family: 'Roboto', sans-serif; font-weight: bold; ">Пойду отмечу этот день <br>
       в календаре:)</h1>
         <img src="images/triangle7.svg" alt="" class="triangle7"></div>
             </div>
